parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID V SP X END
Rule 2     V -> DIM IDLIST AS TIPO SEMMICOLON V
Rule 3     V -> <empty>
Rule 4     IDLIST -> ID
Rule 5     IDLIST -> IDLIST COMMA ID
Rule 6     IDLIST -> <empty>
Rule 7     TIPO -> WORD
Rule 8     TIPO -> FLOAT
Rule 9     TIPO -> ARRAY LBRACKET E RBRACKET
Rule 10    TIPO -> MATRIX LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 11    TIPO -> CUBE LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 12    SP -> SUBPROCEDURE ID V X ENDSUB SEMMICOLON SP
Rule 13    SP -> <empty>
Rule 14    X -> S R
Rule 15    X -> <empty>
Rule 16    R -> SEMMICOLON S R
Rule 17    R -> <empty>
Rule 18    S -> LET E ASSIGN E
Rule 19    S -> PRINT Q
Rule 20    S -> INPUT H GTGT U
Rule 21    S -> CLS
Rule 22    S -> IF EL THEN X ELSE1 ENDIF
Rule 23    S -> WHILE EL X WHEND
Rule 24    S -> DO X LOOPUNTIL EL ENDO
Rule 25    S -> FOR O TO E X NEXT
Rule 26    S -> GOSUB ID
Rule 27    O -> E
Rule 28    O -> E ASSIGN E
Rule 29    U -> ID
Rule 30    U -> ID LBRACKET E RBRACKET
Rule 31    U -> ID LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 32    U -> ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET
Rule 33    Q -> LPARENT U RPARENT
Rule 34    Q -> TEXT
Rule 35    H -> TEXT
Rule 36    H -> <empty>
Rule 37    TEXT -> LPARENT STRING RPARENT
Rule 38    ELSE1 -> ELSE X
Rule 39    ELSE1 -> <empty>
Rule 40    E -> E PLUS T
Rule 41    E -> E MINUS T
Rule 42    E -> T
Rule 43    T -> T TIMES F
Rule 44    T -> T DIVIDE F
Rule 45    T -> F
Rule 46    F -> NUMBER
Rule 47    F -> U
Rule 48    F -> LPARENT E RPARENT
Rule 49    EL -> EL OR TL
Rule 50    EL -> NOT TL
Rule 51    EL -> TL
Rule 52    TL -> TL AND FL
Rule 53    TL -> FL
Rule 54    FL -> K OPREL K
Rule 55    FL -> LPARENT EL RPARENT
Rule 56    OPREL -> LT
Rule 57    OPREL -> LTE
Rule 58    OPREL -> GT
Rule 59    OPREL -> GTE
Rule 60    OPREL -> NE
Rule 61    OPREL -> EQUAL
Rule 62    K -> ID
Rule 63    K -> NUMBER

Terminals, with rules where they appear

AND                  : 52
ARRAY                : 9
AS                   : 2
ASSIGN               : 18 28
CLS                  : 21
COMMA                : 5
CUBE                 : 11
DIM                  : 2
DIVIDE               : 44
DO                   : 24
ELSE                 : 38
END                  : 1
ENDIF                : 22
ENDO                 : 24
ENDSUB               : 12
EQUAL                : 61
FLOAT                : 8
FOR                  : 25
GOSUB                : 26
GT                   : 58
GTE                  : 59
GTGT                 : 20
ID                   : 1 4 5 12 26 29 30 31 32 62
IF                   : 22
INPUT                : 20
LBRACKET             : 9 10 10 11 11 11 30 31 31 32 32 32
LET                  : 18
LOOPUNTIL            : 24
LPARENT              : 33 37 48 55
LT                   : 56
LTE                  : 57
MATRIX               : 10
MINUS                : 41
NE                   : 60
NEXT                 : 25
NOT                  : 50
NUMBER               : 46 63
OR                   : 49
PLUS                 : 40
PRINT                : 19
PROGRAM              : 1
RBRACKET             : 9 10 10 11 11 11 30 31 31 32 32 32
RPARENT              : 33 37 48 55
SEMMICOLON           : 2 12 16
STRING               : 37
SUBPROCEDURE         : 12
THEN                 : 22
TIMES                : 43
TO                   : 25
WHEND                : 23
WHILE                : 23
WORD                 : 7
error                : 

Nonterminals, with rules where they appear

E                    : 9 10 10 11 11 11 18 18 25 27 28 28 30 31 31 32 32 32 40 41 48
EL                   : 22 23 24 49 55
ELSE1                : 22
F                    : 43 44 45
FL                   : 52 53
H                    : 20
IDLIST               : 2 5
K                    : 54 54
O                    : 25
OPREL                : 54
Q                    : 19
R                    : 14 16
S                    : 14 16
SP                   : 1 12
T                    : 40 41 42 43 44
TEXT                 : 34 35
TIPO                 : 2
TL                   : 49 50 51 52
U                    : 20 33 47
V                    : 1 2 12
X                    : 1 12 22 23 24 25 38
program              : 0

Parsing method: SLR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID V SP X END

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID V SP X END

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . V SP X END
    (2) V -> . DIM IDLIST AS TIPO SEMMICOLON V
    (3) V -> .

    DIM             shift and go to state 5
    SUBPROCEDURE    reduce using rule 3 (V -> .)
    LET             reduce using rule 3 (V -> .)
    PRINT           reduce using rule 3 (V -> .)
    INPUT           reduce using rule 3 (V -> .)
    CLS             reduce using rule 3 (V -> .)
    IF              reduce using rule 3 (V -> .)
    WHILE           reduce using rule 3 (V -> .)
    DO              reduce using rule 3 (V -> .)
    FOR             reduce using rule 3 (V -> .)
    GOSUB           reduce using rule 3 (V -> .)
    END             reduce using rule 3 (V -> .)
    ENDSUB          reduce using rule 3 (V -> .)

    V                              shift and go to state 4

state 4

    (1) program -> PROGRAM ID V . SP X END
    (12) SP -> . SUBPROCEDURE ID V X ENDSUB SEMMICOLON SP
    (13) SP -> .

    SUBPROCEDURE    shift and go to state 7
    LET             reduce using rule 13 (SP -> .)
    PRINT           reduce using rule 13 (SP -> .)
    INPUT           reduce using rule 13 (SP -> .)
    CLS             reduce using rule 13 (SP -> .)
    IF              reduce using rule 13 (SP -> .)
    WHILE           reduce using rule 13 (SP -> .)
    DO              reduce using rule 13 (SP -> .)
    FOR             reduce using rule 13 (SP -> .)
    GOSUB           reduce using rule 13 (SP -> .)
    END             reduce using rule 13 (SP -> .)

    SP                             shift and go to state 6

state 5

    (2) V -> DIM . IDLIST AS TIPO SEMMICOLON V
    (4) IDLIST -> . ID
    (5) IDLIST -> . IDLIST COMMA ID
    (6) IDLIST -> .

    ID              shift and go to state 9
    AS              reduce using rule 6 (IDLIST -> .)
    COMMA           reduce using rule 6 (IDLIST -> .)

    IDLIST                         shift and go to state 8

state 6

    (1) program -> PROGRAM ID V SP . X END
    (14) X -> . S R
    (15) X -> .
    (18) S -> . LET E ASSIGN E
    (19) S -> . PRINT Q
    (20) S -> . INPUT H GTGT U
    (21) S -> . CLS
    (22) S -> . IF EL THEN X ELSE1 ENDIF
    (23) S -> . WHILE EL X WHEND
    (24) S -> . DO X LOOPUNTIL EL ENDO
    (25) S -> . FOR O TO E X NEXT
    (26) S -> . GOSUB ID

    END             reduce using rule 15 (X -> .)
    ENDSUB          reduce using rule 15 (X -> .)
    ELSE            reduce using rule 15 (X -> .)
    ENDIF           reduce using rule 15 (X -> .)
    WHEND           reduce using rule 15 (X -> .)
    LOOPUNTIL       reduce using rule 15 (X -> .)
    NEXT            reduce using rule 15 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    X                              shift and go to state 10
    S                              shift and go to state 11

state 7

    (12) SP -> SUBPROCEDURE . ID V X ENDSUB SEMMICOLON SP

    ID              shift and go to state 21


state 8

    (2) V -> DIM IDLIST . AS TIPO SEMMICOLON V
    (5) IDLIST -> IDLIST . COMMA ID

    AS              shift and go to state 22
    COMMA           shift and go to state 23


state 9

    (4) IDLIST -> ID .

    AS              reduce using rule 4 (IDLIST -> ID .)
    COMMA           reduce using rule 4 (IDLIST -> ID .)


state 10

    (1) program -> PROGRAM ID V SP X . END

    END             shift and go to state 24


state 11

    (14) X -> S . R
    (16) R -> . SEMMICOLON S R
    (17) R -> .

    SEMMICOLON      shift and go to state 26
    END             reduce using rule 17 (R -> .)
    ENDSUB          reduce using rule 17 (R -> .)
    ELSE            reduce using rule 17 (R -> .)
    ENDIF           reduce using rule 17 (R -> .)
    WHEND           reduce using rule 17 (R -> .)
    LOOPUNTIL       reduce using rule 17 (R -> .)
    NEXT            reduce using rule 17 (R -> .)

    R                              shift and go to state 25

state 12

    (18) S -> LET . E ASSIGN E
    (40) E -> . E PLUS T
    (41) E -> . E MINUS T
    (42) E -> . T
    (43) T -> . T TIMES F
    (44) T -> . T DIVIDE F
    (45) T -> . F
    (46) F -> . NUMBER
    (47) F -> . U
    (48) F -> . LPARENT E RPARENT
    (29) U -> . ID
    (30) U -> . ID LBRACKET E RBRACKET
    (31) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (32) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    NUMBER          shift and go to state 30
    LPARENT         shift and go to state 32
    ID              shift and go to state 33

    E                              shift and go to state 27
    T                              shift and go to state 28
    F                              shift and go to state 29
    U                              shift and go to state 31

state 13

    (19) S -> PRINT . Q
    (33) Q -> . LPARENT U RPARENT
    (34) Q -> . TEXT
    (37) TEXT -> . LPARENT STRING RPARENT

    LPARENT         shift and go to state 35

    Q                              shift and go to state 34
    TEXT                           shift and go to state 36

state 14

    (20) S -> INPUT . H GTGT U
    (35) H -> . TEXT
    (36) H -> .
    (37) TEXT -> . LPARENT STRING RPARENT

    GTGT            reduce using rule 36 (H -> .)
    LPARENT         shift and go to state 39

    H                              shift and go to state 37
    TEXT                           shift and go to state 38

state 15

    (21) S -> CLS .

    SEMMICOLON      reduce using rule 21 (S -> CLS .)
    END             reduce using rule 21 (S -> CLS .)
    ENDSUB          reduce using rule 21 (S -> CLS .)
    ELSE            reduce using rule 21 (S -> CLS .)
    ENDIF           reduce using rule 21 (S -> CLS .)
    WHEND           reduce using rule 21 (S -> CLS .)
    LOOPUNTIL       reduce using rule 21 (S -> CLS .)
    NEXT            reduce using rule 21 (S -> CLS .)


state 16

    (22) S -> IF . EL THEN X ELSE1 ENDIF
    (49) EL -> . EL OR TL
    (50) EL -> . NOT TL
    (51) EL -> . TL
    (52) TL -> . TL AND FL
    (53) TL -> . FL
    (54) FL -> . K OPREL K
    (55) FL -> . LPARENT EL RPARENT
    (62) K -> . ID
    (63) K -> . NUMBER

    NOT             shift and go to state 42
    LPARENT         shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47

    EL                             shift and go to state 40
    TL                             shift and go to state 41
    FL                             shift and go to state 43
    K                              shift and go to state 44

state 17

    (23) S -> WHILE . EL X WHEND
    (49) EL -> . EL OR TL
    (50) EL -> . NOT TL
    (51) EL -> . TL
    (52) TL -> . TL AND FL
    (53) TL -> . FL
    (54) FL -> . K OPREL K
    (55) FL -> . LPARENT EL RPARENT
    (62) K -> . ID
    (63) K -> . NUMBER

    NOT             shift and go to state 42
    LPARENT         shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47

    EL                             shift and go to state 48
    TL                             shift and go to state 41
    FL                             shift and go to state 43
    K                              shift and go to state 44

state 18

    (24) S -> DO . X LOOPUNTIL EL ENDO
    (14) X -> . S R
    (15) X -> .
    (18) S -> . LET E ASSIGN E
    (19) S -> . PRINT Q
    (20) S -> . INPUT H GTGT U
    (21) S -> . CLS
    (22) S -> . IF EL THEN X ELSE1 ENDIF
    (23) S -> . WHILE EL X WHEND
    (24) S -> . DO X LOOPUNTIL EL ENDO
    (25) S -> . FOR O TO E X NEXT
    (26) S -> . GOSUB ID

    END             reduce using rule 15 (X -> .)
    ENDSUB          reduce using rule 15 (X -> .)
    ELSE            reduce using rule 15 (X -> .)
    ENDIF           reduce using rule 15 (X -> .)
    WHEND           reduce using rule 15 (X -> .)
    LOOPUNTIL       reduce using rule 15 (X -> .)
    NEXT            reduce using rule 15 (X -> .)
    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    X                              shift and go to state 49
    S                              shift and go to state 11

state 19

    (25) S -> FOR . O TO E X NEXT
    (27) O -> . E
    (28) O -> . E ASSIGN E
    (40) E -> . E PLUS T
    (41) E -> . E MINUS T
    (42) E -> . T
    (43) T -> . T TIMES F
    (44) T -> . T DIVIDE F
    (45) T -> . F
    (46) F -> . NUMBER
    (47) F -> . U
    (48) F -> . LPARENT E RPARENT
    (29) U -> . ID
    (30) U -> . ID LBRACKET E RBRACKET
    (31) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (32) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    NUMBER          shift and go to state 30
    LPARENT         shift and go to state 32
    ID              shift and go to state 33

    O                              shift and go to state 50
    E                              shift and go to state 51
    T                              shift and go to state 28
    F                              shift and go to state 29
    U                              shift and go to state 31

state 20

    (26) S -> GOSUB . ID

    ID              shift and go to state 52


state 21

    (12) SP -> SUBPROCEDURE ID . V X ENDSUB SEMMICOLON SP
    (2) V -> . DIM IDLIST AS TIPO SEMMICOLON V
    (3) V -> .

    DIM             shift and go to state 5
    SUBPROCEDURE    reduce using rule 3 (V -> .)
    LET             reduce using rule 3 (V -> .)
    PRINT           reduce using rule 3 (V -> .)
    INPUT           reduce using rule 3 (V -> .)
    CLS             reduce using rule 3 (V -> .)
    IF              reduce using rule 3 (V -> .)
    WHILE           reduce using rule 3 (V -> .)
    DO              reduce using rule 3 (V -> .)
    FOR             reduce using rule 3 (V -> .)
    GOSUB           reduce using rule 3 (V -> .)
    END             reduce using rule 3 (V -> .)
    ENDSUB          reduce using rule 3 (V -> .)

    V                              shift and go to state 53

state 22

    (2) V -> DIM IDLIST AS . TIPO SEMMICOLON V
    (7) TIPO -> . WORD
    (8) TIPO -> . FLOAT
    (9) TIPO -> . ARRAY LBRACKET E RBRACKET
    (10) TIPO -> . MATRIX LBRACKET E RBRACKET LBRACKET E RBRACKET
    (11) TIPO -> . CUBE LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    WORD            shift and go to state 55
    FLOAT           shift and go to state 56
    ARRAY           shift and go to state 57
    MATRIX          shift and go to state 58
    CUBE            shift and go to state 59

    TIPO                           shift and go to state 54

state 23

    (5) IDLIST -> IDLIST COMMA . ID

    ID              shift and go to state 60


state 24

    (1) program -> PROGRAM ID V SP X END .

    $end            reduce using rule 1 (program -> PROGRAM ID V SP X END .)


state 25

    (14) X -> S R .

    END             reduce using rule 14 (X -> S R .)
    ENDSUB          reduce using rule 14 (X -> S R .)
    ELSE            reduce using rule 14 (X -> S R .)
    ENDIF           reduce using rule 14 (X -> S R .)
    WHEND           reduce using rule 14 (X -> S R .)
    LOOPUNTIL       reduce using rule 14 (X -> S R .)
    NEXT            reduce using rule 14 (X -> S R .)


state 26

    (16) R -> SEMMICOLON . S R
    (18) S -> . LET E ASSIGN E
    (19) S -> . PRINT Q
    (20) S -> . INPUT H GTGT U
    (21) S -> . CLS
    (22) S -> . IF EL THEN X ELSE1 ENDIF
    (23) S -> . WHILE EL X WHEND
    (24) S -> . DO X LOOPUNTIL EL ENDO
    (25) S -> . FOR O TO E X NEXT
    (26) S -> . GOSUB ID

    LET             shift and go to state 12
    PRINT           shift and go to state 13
    INPUT           shift and go to state 14
    CLS             shift and go to state 15
    IF              shift and go to state 16
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    GOSUB           shift and go to state 20

    S                              shift and go to state 61

state 27

    (18) S -> LET E . ASSIGN E
    (40) E -> E . PLUS T
    (41) E -> E . MINUS T

    ASSIGN          shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64


state 28

    (42) E -> T .
    (43) T -> T . TIMES F
    (44) T -> T . DIVIDE F

    RBRACKET        reduce using rule 42 (E -> T .)
    ASSIGN          reduce using rule 42 (E -> T .)
    SEMMICOLON      reduce using rule 42 (E -> T .)
    END             reduce using rule 42 (E -> T .)
    ENDSUB          reduce using rule 42 (E -> T .)
    LET             reduce using rule 42 (E -> T .)
    PRINT           reduce using rule 42 (E -> T .)
    INPUT           reduce using rule 42 (E -> T .)
    CLS             reduce using rule 42 (E -> T .)
    IF              reduce using rule 42 (E -> T .)
    WHILE           reduce using rule 42 (E -> T .)
    DO              reduce using rule 42 (E -> T .)
    FOR             reduce using rule 42 (E -> T .)
    GOSUB           reduce using rule 42 (E -> T .)
    NEXT            reduce using rule 42 (E -> T .)
    TO              reduce using rule 42 (E -> T .)
    PLUS            reduce using rule 42 (E -> T .)
    MINUS           reduce using rule 42 (E -> T .)
    RPARENT         reduce using rule 42 (E -> T .)
    ELSE            reduce using rule 42 (E -> T .)
    ENDIF           reduce using rule 42 (E -> T .)
    WHEND           reduce using rule 42 (E -> T .)
    LOOPUNTIL       reduce using rule 42 (E -> T .)
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66


state 29

    (45) T -> F .

    RBRACKET        reduce using rule 45 (T -> F .)
    ASSIGN          reduce using rule 45 (T -> F .)
    SEMMICOLON      reduce using rule 45 (T -> F .)
    END             reduce using rule 45 (T -> F .)
    ENDSUB          reduce using rule 45 (T -> F .)
    LET             reduce using rule 45 (T -> F .)
    PRINT           reduce using rule 45 (T -> F .)
    INPUT           reduce using rule 45 (T -> F .)
    CLS             reduce using rule 45 (T -> F .)
    IF              reduce using rule 45 (T -> F .)
    WHILE           reduce using rule 45 (T -> F .)
    DO              reduce using rule 45 (T -> F .)
    FOR             reduce using rule 45 (T -> F .)
    GOSUB           reduce using rule 45 (T -> F .)
    NEXT            reduce using rule 45 (T -> F .)
    TO              reduce using rule 45 (T -> F .)
    PLUS            reduce using rule 45 (T -> F .)
    MINUS           reduce using rule 45 (T -> F .)
    TIMES           reduce using rule 45 (T -> F .)
    DIVIDE          reduce using rule 45 (T -> F .)
    RPARENT         reduce using rule 45 (T -> F .)
    ELSE            reduce using rule 45 (T -> F .)
    ENDIF           reduce using rule 45 (T -> F .)
    WHEND           reduce using rule 45 (T -> F .)
    LOOPUNTIL       reduce using rule 45 (T -> F .)


state 30

    (46) F -> NUMBER .

    RBRACKET        reduce using rule 46 (F -> NUMBER .)
    ASSIGN          reduce using rule 46 (F -> NUMBER .)
    SEMMICOLON      reduce using rule 46 (F -> NUMBER .)
    END             reduce using rule 46 (F -> NUMBER .)
    ENDSUB          reduce using rule 46 (F -> NUMBER .)
    LET             reduce using rule 46 (F -> NUMBER .)
    PRINT           reduce using rule 46 (F -> NUMBER .)
    INPUT           reduce using rule 46 (F -> NUMBER .)
    CLS             reduce using rule 46 (F -> NUMBER .)
    IF              reduce using rule 46 (F -> NUMBER .)
    WHILE           reduce using rule 46 (F -> NUMBER .)
    DO              reduce using rule 46 (F -> NUMBER .)
    FOR             reduce using rule 46 (F -> NUMBER .)
    GOSUB           reduce using rule 46 (F -> NUMBER .)
    NEXT            reduce using rule 46 (F -> NUMBER .)
    TO              reduce using rule 46 (F -> NUMBER .)
    PLUS            reduce using rule 46 (F -> NUMBER .)
    MINUS           reduce using rule 46 (F -> NUMBER .)
    TIMES           reduce using rule 46 (F -> NUMBER .)
    DIVIDE          reduce using rule 46 (F -> NUMBER .)
    RPARENT         reduce using rule 46 (F -> NUMBER .)
    ELSE            reduce using rule 46 (F -> NUMBER .)
    ENDIF           reduce using rule 46 (F -> NUMBER .)
    WHEND           reduce using rule 46 (F -> NUMBER .)
    LOOPUNTIL       reduce using rule 46 (F -> NUMBER .)


state 31

    (47) F -> U .

    RBRACKET        reduce using rule 47 (F -> U .)
    ASSIGN          reduce using rule 47 (F -> U .)
    SEMMICOLON      reduce using rule 47 (F -> U .)
    END             reduce using rule 47 (F -> U .)
    ENDSUB          reduce using rule 47 (F -> U .)
    LET             reduce using rule 47 (F -> U .)
    PRINT           reduce using rule 47 (F -> U .)
    INPUT           reduce using rule 47 (F -> U .)
    CLS             reduce using rule 47 (F -> U .)
    IF              reduce using rule 47 (F -> U .)
    WHILE           reduce using rule 47 (F -> U .)
    DO              reduce using rule 47 (F -> U .)
    FOR             reduce using rule 47 (F -> U .)
    GOSUB           reduce using rule 47 (F -> U .)
    NEXT            reduce using rule 47 (F -> U .)
    TO              reduce using rule 47 (F -> U .)
    PLUS            reduce using rule 47 (F -> U .)
    MINUS           reduce using rule 47 (F -> U .)
    TIMES           reduce using rule 47 (F -> U .)
    DIVIDE          reduce using rule 47 (F -> U .)
    RPARENT         reduce using rule 47 (F -> U .)
    ELSE            reduce using rule 47 (F -> U .)
    ENDIF           reduce using rule 47 (F -> U .)
    WHEND           reduce using rule 47 (F -> U .)
    LOOPUNTIL       reduce using rule 47 (F -> U .)


state 32

    (48) F -> LPARENT . E RPARENT
    (40) E -> . E PLUS T
    (41) E -> . E MINUS T
    (42) E -> . T
    (43) T -> . T TIMES F
    (44) T -> . T DIVIDE F
    (45) T -> . F
    (46) F -> . NUMBER
    (47) F -> . U
    (48) F -> . LPARENT E RPARENT
    (29) U -> . ID
    (30) U -> . ID LBRACKET E RBRACKET
    (31) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (32) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    NUMBER          shift and go to state 30
    LPARENT         shift and go to state 32
    ID              shift and go to state 33

    E                              shift and go to state 67
    T                              shift and go to state 28
    F                              shift and go to state 29
    U                              shift and go to state 31

state 33

    (29) U -> ID .
    (30) U -> ID . LBRACKET E RBRACKET
    (31) U -> ID . LBRACKET E RBRACKET LBRACKET E RBRACKET
    (32) U -> ID . LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    SEMMICOLON      reduce using rule 29 (U -> ID .)
    END             reduce using rule 29 (U -> ID .)
    ENDSUB          reduce using rule 29 (U -> ID .)
    RPARENT         reduce using rule 29 (U -> ID .)
    RBRACKET        reduce using rule 29 (U -> ID .)
    ASSIGN          reduce using rule 29 (U -> ID .)
    LET             reduce using rule 29 (U -> ID .)
    PRINT           reduce using rule 29 (U -> ID .)
    INPUT           reduce using rule 29 (U -> ID .)
    CLS             reduce using rule 29 (U -> ID .)
    IF              reduce using rule 29 (U -> ID .)
    WHILE           reduce using rule 29 (U -> ID .)
    DO              reduce using rule 29 (U -> ID .)
    FOR             reduce using rule 29 (U -> ID .)
    GOSUB           reduce using rule 29 (U -> ID .)
    NEXT            reduce using rule 29 (U -> ID .)
    TO              reduce using rule 29 (U -> ID .)
    PLUS            reduce using rule 29 (U -> ID .)
    MINUS           reduce using rule 29 (U -> ID .)
    TIMES           reduce using rule 29 (U -> ID .)
    DIVIDE          reduce using rule 29 (U -> ID .)
    ELSE            reduce using rule 29 (U -> ID .)
    ENDIF           reduce using rule 29 (U -> ID .)
    WHEND           reduce using rule 29 (U -> ID .)
    LOOPUNTIL       reduce using rule 29 (U -> ID .)
    LBRACKET        shift and go to state 68


state 34

    (19) S -> PRINT Q .

    SEMMICOLON      reduce using rule 19 (S -> PRINT Q .)
    END             reduce using rule 19 (S -> PRINT Q .)
    ENDSUB          reduce using rule 19 (S -> PRINT Q .)
    ELSE            reduce using rule 19 (S -> PRINT Q .)
    ENDIF           reduce using rule 19 (S -> PRINT Q .)
    WHEND           reduce using rule 19 (S -> PRINT Q .)
    LOOPUNTIL       reduce using rule 19 (S -> PRINT Q .)
    NEXT            reduce using rule 19 (S -> PRINT Q .)


state 35

    (33) Q -> LPARENT . U RPARENT
    (37) TEXT -> LPARENT . STRING RPARENT
    (29) U -> . ID
    (30) U -> . ID LBRACKET E RBRACKET
    (31) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET
    (32) U -> . ID LBRACKET E RBRACKET LBRACKET E RBRACKET LBRACKET E RBRACKET

    STRING          shift and go to state 70
    ID              shift and go to state 33

    U                              shift and go to state 69

state 36

    (34) Q -> TEXT .

    SEMMICOLON      reduce using rule 34 (Q -> TEXT .)
    END             reduce using rule 34 (Q -> TEXT .)
    ENDSUB          reduce using rule 34 (Q -> TEXT .)
    ELSE            reduce using rule 34 (Q -> TEXT .)
    ENDIF           reduce using rule 34 (Q -> TEXT .)
    WHEND           reduce using rule 34 (Q -> TEXT .)
    LOOPUNTIL       reduce using rule 34 (Q -> TEXT .)
    NEXT            reduce using rule 34 (Q -> TEXT .)


state 37

    (20) S -> INPUT H . GTGT U

    GTGT            shift and go to state 71


state 38

    (35) H -> TEXT .

    GTGT            reduce using rule 35 (H -> TEXT .)


state 39

    (37) TEXT -> LPARENT . STRING RPARENT

    STRING          shift and go to state 70


state 40

    (22) S -> IF EL . THEN X ELSE1 ENDIF
    (49) EL -> EL . OR TL

    THEN            shift and go to state 72
    OR              shift and go to state 73


state 41

    (51) EL -> TL .
    (52) TL -> TL . AND FL

    THEN            reduce using rule 51 (EL -> TL .)
    LET             reduce using rule 51 (EL -> TL .)
    PRINT           reduce using rule 51 (EL -> TL .)
    INPUT           reduce using rule 51 (EL -> TL .)
    CLS             reduce using rule 51 (EL -> TL .)
    IF              reduce using rule 51 (EL -> TL .)
    WHILE           reduce using rule 51 (EL -> TL .)
    DO              reduce using rule 51 (EL -> TL .)
    FOR             reduce using rule 51 (EL -> TL .)
    GOSUB           reduce using rule 51 (EL -> TL .)
    WHEND           reduce using rule 51 (EL -> TL .)
    ENDO            reduce using rule 51 (EL -> TL .)
    OR              reduce using rule 51 (EL -> TL .)
    RPARENT         reduce using rule 51 (EL -> TL .)
    AND             shift and go to state 74


state 42

    (50) EL -> NOT . TL
    (52) TL -> . TL AND FL
    (53) TL -> . FL
    (54) FL -> . K OPREL K
    (55) FL -> . LPARENT EL RPARENT
    (62) K -> . ID
    (63) K -> . NUMBER

    LPARENT         shift and go to state 45
    ID              shift and go to state 46
    NUMBER          shift and go to state 47

    TL                             shift and go to state 75
    FL                             shift and go to state 43
    K                              shift and go to state 44

state 43

    (53) TL -> FL .
